# slack_client

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  request.rs  response.rs
api/src/bots/: info.rs  mod.rs
api/src/conversations/: history.rs  info.rs  list.rs  mod.rs  replies.rs
api/src/usergroups/: list.rs  mod.rs  users.rs
api/src/users/: info.rs  list.rs  mod.rs
lib/: Cargo.toml
lib/src/: api_client.rs  client.rs  lib.rs  request.rs  request_method.rs  response.rs  slack_api_client.rs
lib/src/bots/: info.rs  mod.rs
lib/src/client/: mod.rs  request.rs  response.rs
lib/src/client/message/: slack_message.rs
lib/src/conversations/: history.rs  info.rs  mod.rs  replies.rs
lib/src/message/: mod.rs  slack_message.rs  state.rs
lib/src/message_retriever/: mod.rs  state.rs
lib/src/request/: bots.rs  conversations.rs  mod.rs  usergroups.rs  users.rs
lib/src/response/: bots.rs  conversations.rs  mod.rs  usergroups.rs  users.rs
lib/src/usergroups/: list.rs  mod.rs
lib/src/users/: info.rs  list.rs  mod.rs
