[workspace.package]
version = "0.9.0"
edition = "2021"

[workspace]
members = ["api", "bin", "lib"]
resolver = "2"

[workspace.dependencies]
# Error handling
anyhow = "1.0"

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Ser/de
serde = { version = "1.0", features = ["derive"] }
