[package]
name = "slack_client"
version.workspace = true
edition.workspace = true

[dependencies]
# Error handling
anyhow = "1.0"

# Regex
regex = "1.10"

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Ser/de
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"

# URL parsing
url = "2.5"

# To Markdown
mrkdwn2markdown = { git = "https://github.com/0x6b/mrkdwn2markdown", tag = "v0.2.0" }

# Convert Slack emoji to Unicode emoji
slack_emojify = { git = "https://github.com/0x6b/slack_emojify", tag = "v0.1.0" }