[package]
name = "slack_client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true

# Regex
regex = "1"

# Ser/de
serde_json = "1.0"
serde_qs = "0.13"

# URL parsing
url = "2.5"

# Convert Slack emoji to Unicode emoji
slack_emojify = { git = "https://github.com/0x6b/slack_emojify", tag = "v0.1.2" }

# Slack API
slack_api = { path = "../api" }
